test/inference/good/coreml_annotated_letrec.mlt
let rec ['a] (id : 'a -> 'a) = fun x -> x
let rec ['a] (id : 'a -> 'a) = fun x -> x
let rec ['a] (id : 'a -> 'a) = fun x -> x
