test/inference/bad/coreml_exists.mlt
let main = ({'b} fun x -> (x : 'a)) 42